--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha03'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
+
+    implementation 'androidx.preference:preference:1.1.0'
+
 }
