--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.SettingsActivity"
+            android:label="@string/menu_title_settings"
+            android:theme="@style/Theme.AppCompat"
+            android:parentActivityName=".view.WeatherActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".view.WeatherActivity" />
+        </activity>
     </application>
 
 </manifest>
