--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -33,6 +35,7 @@ def mockitoVersion = '2.11.0'
 def picassoVersion = '2.71828'
 def dartVersion = '2.0.1'
 def hensonVersion = '2.0.1'
+def kotlin_version = '1.3.71'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -79,4 +82,5 @@ dependencies {
 
     implementation 'androidx.preference:preference:1.1.0'
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
